--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           poetry run isort .
           poetry run black .
-      - name: Linting with ruff
+      - name: Linting with mypy
         run: |
-          poetry run ruff .
+          poetry run mypy .
