--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,10 +38,10 @@ repos:
 
   - repo: local
     hooks:
-      - id: ruff
-        name: ruff
+      - id: mypy
+        name: mypy
         pass_filenames: false
-        entry: poetry run ruff .
+        entry: poetry run mypy .
         language: python
         stages:
           - commit
