--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 attrs = "^22.1.0"
 aiohttp = "^3.8.3"
 aiofiles = "^22.1.0"
+types-aiofiles = "^22.1.0.4"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -51,3 +52,7 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 src_paths = ["pokelance"]
+
+[tool.mypy]
+python_version = 3.8
+strict = true
