complete basic structure add endpoints and base methods

--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           poetry run isort .
           poetry run black .
-      - name: Linting with mypy
+      - name: Linting with ruff
         run: |
-          poetry run mypy .
+          poetry run ruff .
