--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,15 @@ aiofiles = "^22.1.0"
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
 isort = "^5.10.1"
-mkdocs = "^1.4.2"
 ruff = "^0.0.171"
-mkdocstrings = "^0.19.0"
-mkdocs-material = "^8.5.11"
-Pygments = "^2.13.0"
+pygments = "^2.13.0"
+mkdocs = "^1.4.1"
+mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+mkdocs-material = "^8.5.7"
+typing-extensions = "^4.4.0"
 pre-commit = "^2.20.0"
+Pillow = "^9.3.0"
+CairoSVG = "^2.5.2"
 
 [build-system]
 requires = ["poetry-core"]
