--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,8 +4,13 @@ version: 2
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.10"
+    python: "3.9"
 
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
+
+python:
+  install:
+    - method: pip
+      path: .
