--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,14 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.9"
+  jobs:
+    pre_create_environment:
+      - asdf plugin add poetry
+      - asdf install poetry latest
+      - asdf global poetry latest
+      - poetry config virtualenvs.create false
+    post_install:
+      - poetry install
 
 mkdocs:
   configuration: mkdocs.yml
@@ -14,3 +22,5 @@ python:
   install:
     - method: pip
       path: .
+      extra_requirements:
+        - docs
