--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ black = "^22.12.0"
 isort = "^5.10.1"
 ruff = "^0.0.171"
 pygments = "^2.13.0"
-jinja = "^3.0.3"
+jinja2 = "3.0.3"
 mkdocs = "^1.4.1"
 mkdocstrings = {extras = ["python"], version = "^0.19.0"}
 mkdocs-material = "^8.5.7"
