--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,6 +14,10 @@ build:
     post_install:
       - poetry install
 
+python:
+  install:
+    - requirements: docs/requirements.txt
+
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
