--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -120,4 +120,4 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/FallenDeity/PokeLance
     - icon: fontawesome/brands/discord
-      link: https://discord.gg/FyEE54u9GF
+      link: https://discord.gg/yeyEvT5V2J
