--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,1 +1,67 @@
 Jinja2==3.0.3
+aiofiles==22.1.0 ; python_version >= "3.8" and python_version < "4.0"
+aiohttp==3.8.3 ; python_version >= "3.8" and python_version < "4.0"
+aiosignal==1.3.1 ; python_version >= "3.8" and python_version < "4.0"
+async-timeout==4.0.2 ; python_version >= "3.8" and python_version < "4.0"
+attrs==22.1.0 ; python_version >= "3.8" and python_version < "4.0"
+black==22.12.0 ; python_version >= "3.8" and python_version < "4.0"
+cairocffi==1.4.0 ; python_version >= "3.8" and python_version < "4.0"
+cairosvg==2.5.2 ; python_version >= "3.8" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.8" and python_version < "4"
+cffi==1.15.1 ; python_version >= "3.8" and python_version < "4.0"
+cfgv==3.3.1 ; python_version >= "3.8" and python_version < "4.0"
+charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "4.0"
+click==8.1.3 ; python_version >= "3.8" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0"
+cssselect2==0.7.0 ; python_version >= "3.8" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.8" and python_version < "4.0"
+distlib==0.3.6 ; python_version >= "3.8" and python_version < "4.0"
+filelock==3.8.2 ; python_version >= "3.8" and python_version < "4.0"
+frozenlist==1.3.3 ; python_version >= "3.8" and python_version < "4.0"
+ghp-import==2.1.0 ; python_version >= "3.8" and python_version < "4.0"
+griffe==0.24.1 ; python_version >= "3.8" and python_version < "4.0"
+identify==2.5.9 ; python_version >= "3.8" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.8" and python_version < "4.0"
+importlib-metadata==5.1.0 ; python_version >= "3.8" and python_version < "3.10"
+isort==5.10.1 ; python_version >= "3.8" and python_version < "4.0"
+jinja2==3.0.3 ; python_version >= "3.8" and python_version < "4.0"
+markdown==3.3.7 ; python_version >= "3.8" and python_version < "4.0"
+markupsafe==2.1.1 ; python_version >= "3.8" and python_version < "4.0"
+mergedeep==1.3.4 ; python_version >= "3.8" and python_version < "4.0"
+mkdocs-autorefs==0.4.1 ; python_version >= "3.8" and python_version < "4.0"
+mkdocs-material-extensions==1.1.1 ; python_version >= "3.8" and python_version < "4.0"
+mkdocs-material==8.5.11 ; python_version >= "3.8" and python_version < "4.0"
+mkdocs==1.4.2 ; python_version >= "3.8" and python_version < "4.0"
+mkdocstrings-python==0.8.2 ; python_version >= "3.8" and python_version < "4.0"
+mkdocstrings==0.19.0 ; python_version >= "3.8" and python_version < "4.0"
+mkdocstrings[python]==0.19.0 ; python_version >= "3.8" and python_version < "4.0"
+multidict==6.0.3 ; python_version >= "3.8" and python_version < "4.0"
+mypy-extensions==0.4.3 ; python_version >= "3.8" and python_version < "4.0"
+mypy==0.991 ; python_version >= "3.8" and python_version < "4.0"
+nodeenv==1.7.0 ; python_version >= "3.8" and python_version < "4.0"
+packaging==22.0 ; python_version >= "3.8" and python_version < "4.0"
+pathspec==0.10.3 ; python_version >= "3.8" and python_version < "4.0"
+pillow==9.3.0 ; python_version >= "3.8" and python_version < "4.0"
+platformdirs==2.6.0 ; python_version >= "3.8" and python_version < "4.0"
+pre-commit==2.20.0 ; python_version >= "3.8" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.8" and python_version < "4.0"
+pygments==2.13.0 ; python_version >= "3.8" and python_version < "4.0"
+pymdown-extensions==9.9 ; python_version >= "3.8" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
+pyyaml-env-tag==0.1 ; python_version >= "3.8" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.8" and python_version < "4.0"
+requests==2.28.1 ; python_version >= "3.8" and python_version < "4"
+ruff==0.0.171 ; python_version >= "3.8" and python_version < "4.0"
+setuptools==65.6.3 ; python_version >= "3.8" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.8" and python_version < "4.0"
+tinycss2==1.2.1 ; python_version >= "3.8" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.8" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.8" and python_full_version < "3.11.0a7"
+types-aiofiles==22.1.0.4 ; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.8" and python_version < "4"
+virtualenv==20.17.1 ; python_version >= "3.8" and python_version < "4.0"
+watchdog==2.2.0 ; python_version >= "3.8" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.8" and python_version < "4.0"
+yarl==1.8.2 ; python_version >= "3.8" and python_version < "4.0"
+zipp==3.11.0 ; python_version >= "3.8" and python_version < "3.10"
