--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,6 @@
 version: 2
 updates:
-  package-ecosystem: "pip"
-  directory: "/"
-  schedule:
-    interval: "weekly"
-  commit-message:
-    prefix: "bump packages"
-  labels:
-    - "dependencies"
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval:  "weekly"
