--- a/mkdocs_R.yml
+++ b/mkdocs_R.yml
@@ -3,15 +3,15 @@ repo_url: https://github.com/FallenDeity/PokeLance
 site_description: Documentation for the PokeApi wrapper, PokeLance.
 site_author: FallenDeity
 copyright: Copyright FallenDeity ( 2022 - present )
-site_url: https://FallenDeity.github.io/PokeLance
+site_url: https://pokelance.readthedocs.io/en/latest/
 
 theme:
   name: "readthedocs"
+  locale: en
   logo: assets/pokelance.png
   favicon: assets/pokelance.png
-
-  font:
-    text: Ubuntu
+  collapse_navigation: true
+  titles_only: true
 
   features:
     - navigation.instant
@@ -19,33 +19,13 @@ theme:
     - navigation.tabs
     - navigation.top
     - content.code.annotate
-  palette:
-    - scheme: light
-      toggle:
-        icon: material/weather-sunny
-        name: Light Mode
-    - scheme: slate
-      toggle:
-        icon: material/weather-night
-        name: Dark Mode
+    - content.code.copy
+    - toc.follow
+    - toc.integrate
+    - navigation.footer
 
-plugins:
-  - mkdocstrings:
-      handlers:
-        python:
-          options:
-            docstring_style: numpy
-            merge_init_into_class: false
-            inherited_members: true
-          import:
-            - https://docs.python.org/3.9/objects.inv
-  - search
-  - social:
-      cards_color:
-        fill: "#3761A3"
-        text: "#FFFFFF"
-
-
+  font:
+    text: Ubuntu
 
 nav:
   - Getting Started: index.md
@@ -102,23 +82,34 @@ nav:
       - Discord Bot: guide/discord_bot.md
       - FastAPI: guide/fastapi.md
 
+plugins:
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            docstring_style: numpy
+            merge_init_into_class: false
+            inherited_members: true
+          import:
+            - https://docs.python.org/3.9/objects.inv
+  - search
+  - social:
+      cards_color:
+        fill: "#3761A3"
+        text: "#FFFFFF"
 
 markdown_extensions:
+  - abbr
   - admonition
   - attr_list
   - md_in_html
+  - toc:
+      permalink: ⚓︎
   - pymdownx.highlight:
+      auto_title: true
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
   - pymdownx.details
   - pymdownx.superfences
-
-extra:
-  version: 0.0.1a
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/FallenDeity/PokeLance
-    - icon: fontawesome/brands/discord
-      link: https://discord.gg/yeyEvT5V2J
