--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -2,7 +2,7 @@ name: Code formatter and linter
 
 on:
   push:
-    branches: ["master", "main", "rewrite"]
+    branches: ["master", "main", "rewrite", "develop"]
 
 permissions:
   contents: write
