--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,6 +133,7 @@ markdown_extensions:
   - pymdownx.superfences
 
 extra:
+  version: 0.1.3
   generator: false
   social:
     - icon: fontawesome/brands/github
