--- a/mkdocs_R.yml
+++ b/mkdocs_R.yml
@@ -81,6 +81,7 @@ nav:
       - Basic Usage: guide/basic_usage.md
       - Discord Bot: guide/discord_bot.md
       - FastAPI: guide/fastapi.md
+      - Cache Usage: guide/advanced_cache.md
 
 plugins:
   - mkdocstrings:
