--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -2,9 +2,7 @@ name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
 
 on:
   push:
-    branches: [ "master", "main", "develop", "rewrite" ]
-    tags:
-      - "v*"
+    branches: master
 
 jobs:
   build-n-publish:
