--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -81,4 +81,4 @@ jobs:
     - name: Upload SARIF results
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: codeql-results.sarif
+        sarif_file: "/results/python.sarif"
