--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,9 +18,12 @@ theme:
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
+    - navigation.indexes
     - navigation.top
+    - navigation.sections
     - content.code.annotate
     - content.code.copy
+    - content.tabs.link
     - toc.follow
     - toc.integrate
     - navigation.footer
@@ -55,8 +58,6 @@ plugins:
       cards_color:
         fill: "#3761A3"
         text: "#FFFFFF"
-
-
 
 nav:
   - Getting Started: index.md
@@ -116,25 +117,38 @@ nav:
       - FastAPI: guide/fastapi.md
       - Cache Usage: guide/advanced_cache.md
 
-
 markdown_extensions:
+  - tables
+  - footnotes
+  - pymdownx.betterem
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
   - abbr
   - admonition
   - attr_list
   - md_in_html
+  - pymdownx.details
+  - pymdownx.superfences
+  - def_list
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
   - toc:
       permalink: ⚓︎
   - pymdownx.highlight:
       auto_title: true
+      line_spans: __span
       anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tabbed:
+      alternate_style: true
 
 extra:
-  version: 0.1.8
+  version: 0.1.9
   generator: false
   social:
     - icon: fontawesome/brands/github
