--- a/mkdocs_R.yml
+++ b/mkdocs_R.yml
@@ -17,9 +17,12 @@ theme:
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
+    - navigation.indexes
     - navigation.top
+    - navigation.sections
     - content.code.annotate
     - content.code.copy
+    - content.tabs.link
     - toc.follow
     - toc.integrate
     - navigation.footer
@@ -88,8 +91,10 @@ plugins:
       handlers:
         python:
           options:
+            show_root_heading: true
+            show_root_toc_entry: false
             docstring_style: numpy
-            merge_init_into_class: false
+            merge_init_into_class: true
             inherited_members: true
           import:
             - https://docs.python.org/3.9/objects.inv
@@ -100,23 +105,37 @@ plugins:
         text: "#FFFFFF"
 
 markdown_extensions:
+  - tables
+  - footnotes
+  - pymdownx.betterem
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
   - abbr
   - admonition
   - attr_list
   - md_in_html
+  - pymdownx.details
+  - pymdownx.superfences
+  - def_list
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
   - toc:
       permalink: ⚓︎
   - pymdownx.highlight:
       auto_title: true
+      line_spans: __span
       anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tabbed:
+      alternate_style: true
 
 extra:
-  version: 0.1.8
+  version: 0.1.9
   generator: false
   social:
     - icon: fontawesome/brands/github
