--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,3 +55,13 @@ repos:
         language: python
         stages:
           - commit
+
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        pass_filenames: false
+        entry: poetry run pytest
+        language: system
+        stages:
+          - commit
