--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -2,39 +2,34 @@ name: Release on GitHub
 
 on:
   push:
-    tags: [v*]
+    branches: ["master", "main", "rewrite", "develop"]
 
 jobs:
-  release:
+  release-asset:
     name: Release on GitHub
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Get version from tag
+        id: tag_name
+        run: echo ::set-output name=tag_name::${GITHUB_REF#refs/tags/v}
+
+      - name: Get Changelog Entry
+        id: changelog_reader
+        uses: mindsers/changelog-reader-action@v2
+        with:
+          version: ${{ steps.tag_name.outputs.tag_name }}
+          path: ./CHANGELOG.md
+
       - name: Create GitHub Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          body_path: ./CHANGELOG.md
-          draft: false
-          prerelease: false
-
-      - name: Get Asset name
-        run: |
-          export PKG=$(ls dist/ | grep tar)
-          set -- $PKG
-          echo "name=$1" >> $GITHUB_ENV
-
-      - name: Upload Release Asset (sdist) to GitHub
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/${{ env.name }}
-          asset_name: ${{ env.name }}
-          asset_content_type: application/zip
+          name: ${{ steps.changelog_reader.outputs.date }} (${{ steps.changelog_reader.outputs.version }})
+          tag: ${{ steps.tag_name.outputs.tag_name }}
+          body: ${{ steps.changelog_reader.outputs.changes }}
+          prerelease: $${{ steps.changelog_reader.outputs.status == 'prereleased' }}
+          draft: $${{ steps.changelog_reader.outputs.status == 'unreleased' }}
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
