--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -22,7 +22,7 @@ jobs:
         id: changelog
         uses: coditory/changelog-parser@v1
         with:
-          version: ${{ steps.tag_name.outputs.tag_name }}
+          version: v${{ steps.tag_name.outputs.tag_name }}
 
       - name: Create GitHub Release
         id: create_release
