--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pokelance"
-version = "0.2.5"
+version = "0.2.6"
 description = "A flexible and easy to use pokemon library."
 authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
 license = "MIT"
@@ -30,6 +30,7 @@ pipwin = "^0.5.2"
 pytest = "^7.4.3"
 pytest-asyncio = "^0.23.2"
 auto-changelog = "^0.6.0"
+deepdiff = "^6.7.1"
 
 [build-system]
 requires = ["poetry-core"]
