--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pokelance"
-version = "0.2.7"
+version = "0.2.8"
 description = "A flexible and easy to use pokemon library."
 authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
 license = "MIT"
@@ -54,5 +54,5 @@ ensure_newline_before_comments = true
 src_paths = ["pokelance"]
 
 [tool.mypy]
-python_version = 3.8
+python_version = "3.8"
 strict = true
