fix: Fix mkdocs dependency versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,8 @@ attrs = "^23.1.0"
 black = "^22.12.0"
 isort = "^5.10.1"
 ruff = ">=0.0.171,<0.1.10"
-pygments = "^2.13.0"
-mkdocs = "^1.4.1"
-mkdocstrings = {extras = ["python-legacy"], version = "^0.26.1"}
+pygments = "^2.16.0"
+mkdocs = "^1.5.2"
 typing-extensions = "^4.4.0"
 pre-commit = "^2.20.0"
 Pillow = ">=9.3,<11.0"
@@ -30,7 +29,8 @@ pytest = "^7.4.3"
 pytest-asyncio = "^0.23.2"
 auto-changelog = "^0.6.0"
 deepdiff = "^6.7.1"
-pytkdocs = {extras = ["numpy-style"], version = "^0.16.2"}
+pytkdocs = {version = ">=0.5.0", extras = ["numpy-style"]}
+mkdocstrings = {version = ">=0.18", extras = ["python"]}
 mkdocs-material = "^9.5.48"
 
 [build-system]
