ci: :sparkles: Update pipelines to run on prs
Pipelines now run on prs, and docs only deploy when publishing

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,12 +13,11 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "master", "main", "rewrite", "develop" ]
+    branches: ["**"]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "master", "main", "rewrite", "develop" ]
+    branches: ["**"]
   schedule:
-    - cron: '22 6 * * 5'
+    - cron: '00 6 * * 5'
 
 jobs:
   analyze:
