--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -2,10 +2,9 @@ name: Code formatter and linter
 
 on:
   push:
-    branches: ["master", "main", "rewrite", "develop"]
-
-permissions:
-  contents: write
+    branches: ["**"]
+  pull_request:
+    branches: ["**"]
 
 jobs:
 
@@ -20,21 +19,25 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "latest"
+          enable-cache: true
+
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install uv
-          uv sync
+          uv sync --locked --all-extras --dev
+
       - name: Format with isort and black
         run: |
           uv run isort .
           uv run black .
+
       - name: Linting with ruff
         run: |
           uv run ruff .
+
       - name: Type checking with mypy
         run: |
           uv run mypy .
-      - name: Build docs
-        run: |
-          uv run mkdocs gh-deploy --force
