ci: Update uv install dep command

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          uv sync --locked --all-extras --dev
+          uv sync --locked --all-groups
 
       - name: Build and deploy docs
         run: |
