--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          uv sync --locked --all-extras --dev
+          uv sync --locked --all-groups
 
       - name: Format with isort and black
         run: |
